dashy/resources/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
  namespace: dashy
  labels:
    app: dashy
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: dashy
  template:
    metadata:
      labels:
        app: dashy
    spec:
      containers:
        - name: dashy
          image: lissy93/dashy:4.4.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - name: dashy-data
              mountPath: /app/user-data
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 4
              memory: 2Gi
      volumes:
        - name: dashy-data
          persistentVolumeClaim:
            claimName: dashy-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: dashy
spec:
  selector:
    app: dashy
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
