dashy/resources/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: headers-home
  namespace: dashy
spec:
  headers:
    accessControlAllowHeaders: ["*"]
    accessControlAllowOriginList:
      - https://auth.cryogence.io
      - https://home.cryogence.io
    # prevent MIME-type sniffing
    contentTypeNosniff: true
    # clickjacking protection
    frameDeny: true
    contentSecurityPolicy: >-
      base-uri 'self';
      connect-src 'self' https://auth.cryogence.io https://codestats.net https://api.ipgeolocation.io;
      default-src 'self';
      font-src 'self';
      form-action 'self';
      frame-ancestors 'none';
      frame-src https://auth.cryogence.io;
      img-src 'self' data: https:;
      manifest-src 'self';
      media-src 'self';
      object-src 'none';
      script-src 'self' 'unsafe-inline' 'unsafe-eval';
      style-src 'self' 'unsafe-inline';
      worker-src 'self';
      upgrade-insecure-requests
    # restrict browser features
    # set to (self) as needed.
    permissionsPolicy: >-
      accelerometer=(),
      bluetooth=(),
      camera=(),
      geolocation=(),
      gyroscope=(),
      interest-cohort=(),
      magnetometer=(),
      microphone=(),
      midi=(),
      payment=(),
      picture-in-picture=(),
      publickey-credentials-get=(),
      screen-wake-lock=(),
      serial=(),
      usb=(),
      vr=()
    # dont leak url paths to other origins
    referrerPolicy: strict-origin-when-cross-origin
    # hsts configs
    stsSeconds: 63072000
    stsIncludeSubdomains: true
    stsPreload: true
    forceSTSHeader: true
    # block bots
    customResponseHeaders:
      X-Robots-Tag: "noindex, nofollow, noarchive, nosnippet, notranslate, noimageindex"
      Cross-Origin-Opener-Policy: "same-origin"
      Cross-Origin-Resource-Policy: "same-site"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashy-webui
  namespace: dashy
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`home.cryogence.io`)
      services:
        - name: dashy
          port: 8080
          scheme: http
      middlewares:
        - name: headers-home
          namespace: dashy
  tls:
    secretName: cert-home-io
